# prompt-platform

./: .env.example  .gitignore  2026-06-17-prompt-platform-design.md  README.md  README_CN.md  docker-compose.yml  测试套件使用手册.md  测试手册.md  项目总结.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: auth.py  experiments.py  projects.py  prompts.py  reports.py  tests.py  versions.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  experiment.py  experiment_result.py  project.py  project_member.py  prompt.py  prompt_version.py  test_run.py  test_suite.py  user.py
backend/app/providers/: __init__.py  base.py  claude.py  deepseek.py  openai.py
backend/app/repositories/: __init__.py  base.py  experiment_repo.py  experiment_result_repo.py  project_member_repo.py  project_repo.py  prompt_repo.py  test_run_repo.py  test_suite_repo.py  user_repo.py  version_repo.py
backend/app/schemas/: __init__.py  auth.py  experiment.py  project.py  prompt.py  test.py  version.py
backend/app/services/: auth_service.py  experiment_service.py  mixins.py  project_service.py  prompt_service.py  test_service.py  version_service.py
backend/app/worker/: tasks.py
docker/: Dockerfile.backend  Dockerfile.worker  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: ToastContainer.vue
frontend/src/composables/: useToast.js
scripts/: e2e_test.py
(+4 files in other folders)
